trunk/Step4/generated/MicroParser.java
// $ANTLR 3.3 Nov 30, 2010 12:50:56 src/Micro.g 2011-03-12 01:16:59

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class MicroParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ID_LIST", "FUNC_DECL_LIST", "STMT_LIST", "CALL_EXPR", "EXPR_LIST", "K_PROGRAM", "K_BEGIN", "K_END", "IDENTIFIER", "K_STRING", "ASSIGN", "STRINGLITERAL", "K_FLOAT", "K_INT", "K_VOID", "K_FUNCTION", "LP", "RP", "K_READ", "K_WRITE", "K_RETURN", "INTLITERAL", "FLOATLITERAL", "ADD", "SUB", "MULT", "DIV", "K_IF", "K_THEN", "K_ENDIF", "K_ELSE", "LT", "GT", "EQ", "K_FOR", "K_ENDFOR", "K_PROTO", "COMMENT", "WS", "';'", "','"
    };
    public static final int EOF=-1;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int ID_LIST=4;
    public static final int FUNC_DECL_LIST=5;
    public static final int STMT_LIST=6;
    public static final int CALL_EXPR=7;
    public static final int EXPR_LIST=8;
    public static final int K_PROGRAM=9;
    public static final int K_BEGIN=10;
    public static final int K_END=11;
    public static final int IDENTIFIER=12;
    public static final int K_STRING=13;
    public static final int ASSIGN=14;
    public static final int STRINGLITERAL=15;
    public static final int K_FLOAT=16;
    public static final int K_INT=17;
    public static final int K_VOID=18;
    public static final int K_FUNCTION=19;
    public static final int LP=20;
    public static final int RP=21;
    public static final int K_READ=22;
    public static final int K_WRITE=23;
    public static final int K_RETURN=24;
    public static final int INTLITERAL=25;
    public static final int FLOATLITERAL=26;
    public static final int ADD=27;
    public static final int SUB=28;
    public static final int MULT=29;
    public static final int DIV=30;
    public static final int K_IF=31;
    public static final int K_THEN=32;
    public static final int K_ENDIF=33;
    public static final int K_ELSE=34;
    public static final int LT=35;
    public static final int GT=36;
    public static final int EQ=37;
    public static final int K_FOR=38;
    public static final int K_ENDFOR=39;
    public static final int K_PROTO=40;
    public static final int COMMENT=41;
    public static final int WS=42;

    // delegates
    // delegators


        public MicroParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public MicroParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return MicroParser.tokenNames; }
    public String getGrammarFileName() { return "src/Micro.g"; }


    	SymbolTable globalTab;
    	SymbolTable currentTab;


    public static class program_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "program"
    // src/Micro.g:30:1: program[SymbolTable globalSymTab] : K_PROGRAM id K_BEGIN pgm_body K_END ;
    public final MicroParser.program_return program(SymbolTable globalSymTab) throws RecognitionException {
        MicroParser.program_return retval = new MicroParser.program_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token K_PROGRAM1=null;
        Token K_BEGIN3=null;
        Token K_END5=null;
        MicroParser.id_return id2 = null;

        MicroParser.pgm_body_return pgm_body4 = null;


        CommonTree K_PROGRAM1_tree=null;
        CommonTree K_BEGIN3_tree=null;
        CommonTree K_END5_tree=null;

        try {
            // src/Micro.g:31:3: ( K_PROGRAM id K_BEGIN pgm_body K_END )
            // src/Micro.g:31:5: K_PROGRAM id K_BEGIN pgm_body K_END
            {
            root_0 = (CommonTree)adaptor.nil();


            			globalTab = globalSymTab;
            			currentTab = globalTab;
            			currentTab.scopeId = "global";
            			//System.out.println("Printing Global Symbol Table");
            			
            K_PROGRAM1=(Token)match(input,K_PROGRAM,FOLLOW_K_PROGRAM_in_program108); 
            K_PROGRAM1_tree = (CommonTree)adaptor.create(K_PROGRAM1);
            root_0 = (CommonTree)adaptor.becomeRoot(K_PROGRAM1_tree, root_0);

            pushFollow(FOLLOW_id_in_program111);
            id2=id();

            state._fsp--;

            K_BEGIN3=(Token)match(input,K_BEGIN,FOLLOW_K_BEGIN_in_program117); 
            pushFollow(FOLLOW_pgm_body_in_program120);
            pgm_body4=pgm_body();

            state._fsp--;

            adaptor.addChild(root_0, pgm_body4.getTree());
            K_END5=(Token)match(input,K_END,FOLLOW_K_END_in_program122); 

            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "program"

    public static class id_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "id"
    // src/Micro.g:40:1: id : IDENTIFIER ;
    public final MicroParser.id_return id() throws RecognitionException {
        MicroParser.id_return retval = new MicroParser.id_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token IDENTIFIER6=null;

        CommonTree IDENTIFIER6_tree=null;

        try {
            // src/Micro.g:41:3: ( IDENTIFIER )
            // src/Micro.g:41:5: IDENTIFIER
            {
            root_0 = (CommonTree)adaptor.nil();

            IDENTIFIER6=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_id151); 
            IDENTIFIER6_tree = (CommonTree)adaptor.create(IDENTIFIER6);
            adaptor.addChild(root_0, IDENTIFIER6_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "id"

    public static class pgm_body_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "pgm_body"
    // src/Micro.g:43:1: pgm_body : decl func_decl_list ;
    public final MicroParser.pgm_body_return pgm_body() throws RecognitionException {
        MicroParser.pgm_body_return retval = new MicroParser.pgm_body_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        MicroParser.decl_return decl7 = null;

        MicroParser.func_decl_list_return func_decl_list8 = null;



        try {
            // src/Micro.g:44:3: ( decl func_decl_list )
            // src/Micro.g:44:5: decl func_decl_list
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_decl_in_pgm_body174);
            decl7=decl();

            state._fsp--;

            pushFollow(FOLLOW_func_decl_list_in_pgm_body177);
            func_decl_list8=func_decl_list();

            state._fsp--;

            adaptor.addChild(root_0, func_decl_list8.getTree());

            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "pgm_body"

    public static class decl_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "decl"
    // src/Micro.g:46:1: decl : ( decl_list )* ;
    public final MicroParser.decl_return decl() throws RecognitionException {
        MicroParser.decl_return retval = new MicroParser.decl_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        MicroParser.decl_list_return decl_list9 = null;



        try {
            // src/Micro.g:47:3: ( ( decl_list )* )
            // src/Micro.g:47:5: ( decl_list )*
            {
            root_0 = (CommonTree)adaptor.nil();

            // src/Micro.g:47:5: ( decl_list )*
            loop1:
            do {
                int alt1=2;
                alt1 = dfa1.predict(input);
                switch (alt1) {
            	case 1 :
            	    // src/Micro.g:47:5: decl_list
            	    {
            	    pushFollow(FOLLOW_decl_list_in_decl189);
            	    decl_list9=decl_list();

            	    state._fsp--;

            	    adaptor.addChild(root_0, decl_list9.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "decl"

    public static class decl_list_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "decl_list"
    // src/Micro.g:49:1: decl_list : ( string_decl_list | var_decl_list );
    public final MicroParser.decl_list_return decl_list() throws RecognitionException {
        MicroParser.decl_list_return retval = new MicroParser.decl_list_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        MicroParser.string_decl_list_return string_decl_list10 = null;

        MicroParser.var_decl_list_return var_decl_list11 = null;



        try {
            // src/Micro.g:50:3: ( string_decl_list | var_decl_list )
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==K_STRING) ) {
                alt2=1;
            }
            else if ( ((LA2_0>=K_FLOAT && LA2_0<=K_INT)) ) {
                alt2=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }
            switch (alt2) {
                case 1 :
                    // src/Micro.g:50:5: string_decl_list
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_string_decl_list_in_decl_list206);
                    string_decl_list10=string_decl_list();

                    state._fsp--;

                    adaptor.addChild(root_0, string_decl_list10.getTree());

                    }
                    break;
                case 2 :
                    // src/Micro.g:50:24: var_decl_list
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_var_decl_list_in_decl_list210);
                    var_decl_list11=var_decl_list();

                    state._fsp--;

                    adaptor.addChild(root_0, var_decl_list11.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "decl_list"

    public static class string_decl_list_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "string_decl_list"
    // src/Micro.g:54:1: string_decl_list : ( string_decl )+ ;
    public final MicroParser.string_decl_list_return string_decl_list() throws RecognitionException {
        MicroParser.string_decl_list_return retval = new MicroParser.string_decl_list_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        MicroParser.string_decl_return string_decl12 = null;



        try {
            // src/Micro.g:55:3: ( ( string_decl )+ )
            // src/Micro.g:55:5: ( string_decl )+
            {
            root_0 = (CommonTree)adaptor.nil();

            // src/Micro.g:55:5: ( string_decl )+
            int cnt3=0;
            loop3:
            do {
                int alt3=2;
                alt3 = dfa3.predict(input);
                switch (alt3) {
            	case 1 :
            	    // src/Micro.g:55:5: string_decl
            	    {
            	    pushFollow(FOLLOW_string_decl_in_string_decl_list227);
            	    string_decl12=string_decl();

            	    state._fsp--;

            	    adaptor.addChild(root_0, string_decl12.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt3 >= 1 ) break loop3;
                        EarlyExitException eee =
                            new EarlyExitException(3, input);
                        throw eee;
                }
                cnt3++;
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "string_decl_list"

    public static class string_decl_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "string_decl"
    // src/Micro.g:57:1: string_decl : K_STRING id ASSIGN str ';' ;
    public final MicroParser.string_decl_return string_decl() throws RecognitionException {
        MicroParser.string_decl_return retval = new MicroParser.string_decl_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token K_STRING13=null;
        Token ASSIGN15=null;
        Token char_literal17=null;
        MicroParser.id_return id14 = null;

        MicroParser.str_return str16 = null;


        CommonTree K_STRING13_tree=null;
        CommonTree ASSIGN15_tree=null;
        CommonTree char_literal17_tree=null;

        try {
            // src/Micro.g:58:3: ( K_STRING id ASSIGN str ';' )
            // src/Micro.g:58:5: K_STRING id ASSIGN str ';'
            {
            root_0 = (CommonTree)adaptor.nil();

            K_STRING13=(Token)match(input,K_STRING,FOLLOW_K_STRING_in_string_decl247); 
            K_STRING13_tree = (CommonTree)adaptor.create(K_STRING13);
            adaptor.addChild(root_0, K_STRING13_tree);

            pushFollow(FOLLOW_id_in_string_decl249);
            id14=id();

            state._fsp--;

            adaptor.addChild(root_0, id14.getTree());
            ASSIGN15=(Token)match(input,ASSIGN,FOLLOW_ASSIGN_in_string_decl251); 
            ASSIGN15_tree = (CommonTree)adaptor.create(ASSIGN15);
            adaptor.addChild(root_0, ASSIGN15_tree);

            pushFollow(FOLLOW_str_in_string_decl253);
            str16=str();

            state._fsp--;

            adaptor.addChild(root_0, str16.getTree());
            char_literal17=(Token)match(input,43,FOLLOW_43_in_string_decl255); 
            char_literal17_tree = (CommonTree)adaptor.create(char_literal17);
            adaptor.addChild(root_0, char_literal17_tree);


            			Symbol s = new Symbol((id14!=null?input.toString(id14.start,id14.stop):null), "STRING", (str16!=null?input.toString(str16.start,str16.stop):null));
            			currentTab.define(s);
            			//s.printStr();
            			

            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "string_decl"

    public static class str_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "str"
    // src/Micro.g:65:1: str : STRINGLITERAL ;
    public final MicroParser.str_return str() throws RecognitionException {
        MicroParser.str_return retval = new MicroParser.str_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token STRINGLITERAL18=null;

        CommonTree STRINGLITERAL18_tree=null;

        try {
            // src/Micro.g:66:3: ( STRINGLITERAL )
            // src/Micro.g:66:5: STRINGLITERAL
            {
            root_0 = (CommonTree)adaptor.nil();

            STRINGLITERAL18=(Token)match(input,STRINGLITERAL,FOLLOW_STRINGLITERAL_in_str287); 
            STRINGLITERAL18_tree = (CommonTree)adaptor.create(STRINGLITERAL18);
            adaptor.addChild(root_0, STRINGLITERAL18_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "str"

    public static class var_decl_list_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "var_decl_list"
    // src/Micro.g:70:1: var_decl_list : ( var_decl )+ ;
    public final MicroParser.var_decl_list_return var_decl_list() throws RecognitionException {
        MicroParser.var_decl_list_return retval = new MicroParser.var_decl_list_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        MicroParser.var_decl_return var_decl19 = null;



        try {
            // src/Micro.g:71:3: ( ( var_decl )+ )
            // src/Micro.g:71:5: ( var_decl )+
            {
            root_0 = (CommonTree)adaptor.nil();

            // src/Micro.g:71:5: ( var_decl )+
            int cnt4=0;
            loop4:
            do {
                int alt4=2;
                alt4 = dfa4.predict(input);
                switch (alt4) {
            	case 1 :
            	    // src/Micro.g:71:5: var_decl
            	    {
            	    pushFollow(FOLLOW_var_decl_in_var_decl_list308);
            	    var_decl19=var_decl();

            	    state._fsp--;

            	    adaptor.addChild(root_0, var_decl19.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt4 >= 1 ) break loop4;
                        EarlyExitException eee =
                            new EarlyExitException(4, input);
                        throw eee;
                }
                cnt4++;
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "var_decl_list"

    public static class var_decl_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "var_decl"
    // src/Micro.g:73:1: var_decl : var_type var_id_list ';' ;
    public final MicroParser.var_decl_return var_decl() throws RecognitionException {
        MicroParser.var_decl_return retval = new MicroParser.var_decl_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token char_literal22=null;
        MicroParser.var_type_return var_type20 = null;

        MicroParser.var_id_list_return var_id_list21 = null;


        CommonTree char_literal22_tree=null;

        try {
            // src/Micro.g:74:3: ( var_type var_id_list ';' )
            // src/Micro.g:74:5: var_type var_id_list ';'
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_var_type_in_var_decl331);
            var_type20=var_type();

            state._fsp--;

            adaptor.addChild(root_0, var_type20.getTree());
            pushFollow(FOLLOW_var_id_list_in_var_decl333);
            var_id_list21=var_id_list();

            state._fsp--;

            adaptor.addChild(root_0, var_id_list21.getTree());
            char_literal22=(Token)match(input,43,FOLLOW_43_in_var_decl335); 
            char_literal22_tree = (CommonTree)adaptor.create(char_literal22);
            adaptor.addChild(root_0, char_literal22_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "var_decl"

    public static class var_type_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "var_type"
    // src/Micro.g:76:1: var_type : ( K_FLOAT | K_INT );
    public final MicroParser.var_type_return var_type() throws RecognitionException {
        MicroParser.var_type_return retval = new MicroParser.var_type_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token K_FLOAT23=null;
        Token K_INT24=null;

        CommonTree K_FLOAT23_tree=null;
        CommonTree K_INT24_tree=null;

        try {
            // src/Micro.g:77:3: ( K_FLOAT | K_INT )
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==K_FLOAT) ) {
                alt5=1;
            }
            else if ( (LA5_0==K_INT) ) {
                alt5=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;
            }
            switch (alt5) {
                case 1 :
                    // src/Micro.g:77:5: K_FLOAT
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    K_FLOAT23=(Token)match(input,K_FLOAT,FOLLOW_K_FLOAT_in_var_type353); 
                    K_FLOAT23_tree = (CommonTree)adaptor.create(K_FLOAT23);
                    adaptor.addChild(root_0, K_FLOAT23_tree);

                    currentTab.currentVarType = "FLOAT";

                    }
                    break;
                case 2 :
                    // src/Micro.g:78:5: K_INT
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    K_INT24=(Token)match(input,K_INT,FOLLOW_K_INT_in_var_type362); 
                    K_INT24_tree = (CommonTree)adaptor.create(K_INT24);
                    adaptor.addChild(root_0, K_INT24_tree);

                    currentTab.currentVarType = "INT";

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "var_type"

    public static class any_type_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "any_type"
    // src/Micro.g:80:1: any_type : ( var_type | K_VOID );
    public final MicroParser.any_type_return any_type() throws RecognitionException {
        MicroParser.any_type_return retval = new MicroParser.any_type_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token K_VOID26=null;
        MicroParser.var_type_return var_type25 = null;


        CommonTree K_VOID26_tree=null;

        try {
            // src/Micro.g:81:3: ( var_type | K_VOID )
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( ((LA6_0>=K_FLOAT && LA6_0<=K_INT)) ) {
                alt6=1;
            }
            else if ( (LA6_0==K_VOID) ) {
                alt6=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;
            }
            switch (alt6) {
                case 1 :
                    // src/Micro.g:81:5: var_type
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_var_type_in_any_type389);
                    var_type25=var_type();

                    state._fsp--;

                    adaptor.addChild(root_0, var_type25.getTree());

                    }
                    break;
                case 2 :
                    // src/Micro.g:82:5: K_VOID
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    K_VOID26=(Token)match(input,K_VOID,FOLLOW_K_VOID_in_any_type395); 
                    K_VOID26_tree = (CommonTree)adaptor.create(K_VOID26);
                    adaptor.addChild(root_0, K_VOID26_tree);


                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "any_type"

    public static class var_id_list_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "var_id_list"
    // src/Micro.g:84:1: var_id_list : var_id ( ',' var_id )* ;
    public final MicroParser.var_id_list_return var_id_list() throws RecognitionException {
        MicroParser.var_id_list_return retval = new MicroParser.var_id_list_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token char_literal28=null;
        MicroParser.var_id_return var_id27 = null;

        MicroParser.var_id_return var_id29 = null;


        CommonTree char_literal28_tree=null;

        try {
            // src/Micro.g:85:3: ( var_id ( ',' var_id )* )
            // src/Micro.g:85:5: var_id ( ',' var_id )*
            {
            root_0 = (CommonTree)adaptor.nil();

            pushFollow(FOLLOW_var_id_in_var_id_list408);
            var_id27=var_id();

            state._fsp--;

            adaptor.addChild(root_0, var_id27.getTree());
            // src/Micro.g:85:12: ( ',' var_id )*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( (LA7_0==44) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // src/Micro.g:85:14: ',' var_id
            	    {
            	    char_literal28=(Token)match(input,44,FOLLOW_44_in_var_id_list412); 
            	    char_literal28_tree = (CommonTree)adaptor.create(char_literal28);
            	    adaptor.addChild(root_0, char_literal28_tree);

            	    pushFollow(FOLLOW_var_id_in_var_id_list414);
            	    var_id29=var_id();

            	    state._fsp--;

            	    adaptor.addChild(root_0, var_id29.getTree());

            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
